✨ Add an API endpoint to save articles (#12)
* ✨ Add an API endpoint to save articles